--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <link
             rel="icon"
-            type="image/png"
-            href="/assets/IMG_20251005_140119.png"
+            type="image/jpeg"
+            href="/assets/IMG_20251005_140119.jpg"
         />
         <link rel="manifest" href="manifest.json" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
